--- a/sass/style.scss
+++ b/sass/style.scss
@@ -67,6 +67,9 @@ body {
             .logo {
               margin: 6px 0 2px 0;
               display: inline-block;
+              @media (max-width: 768px) {
+                margin-left: 15px;
+              }
               .modus {
                 font-size: 30px;
                 font-weight: bold;
@@ -137,6 +140,23 @@ body {
               }
               .open, .open>a, .open:hover a, .open:focus a{
                 @extend .hover-button-red;
+              }
+              li.search{
+                ul{
+                  li{
+                    width: 280px;
+                  }
+                }
+                #search-box{
+                  width: 250px;
+                  display: inline-block;
+                  border-radius: 0;
+                }
+                #search-icon{
+                  color: $primary-color-green;
+                  font-size: 16px;
+                  padding-left: 10px;
+                }
               }
               @media (min-width: 768px) {
                 ul.second-dropdown{
@@ -366,30 +386,30 @@ body {
         .slideItem-left{
           position: absolute;
           left: 0;
-          top: 20%;
-          z-index: 1;
-          -webkit-transition: 1.5s;
-          -moz-transition: 1.5s ;
-          -ms-transition: 1.5s ;
-          -o-transition: 1.5s ;
-          transition: 1.5s ;
+          top: 10%;
+          z-index: 0;
+          -webkit-transform: translate(0, 10%);
+          -moz-transform: translate(0, 10%);
+          -ms-transform: translate(0, 10%);
+          -o-transform: translate(0, 10%);
+          transform: translate(0, 10%);
         }
         .slideItem-right{
           position: absolute;
-          right: 0;
-          top: 20%;
-          z-index: 1;
-          -webkit-transition: 1.5s;
-          -moz-transition: 1.5s ;
-          -ms-transition: 1.5s ;
-          -o-transition: 1.5s ;
-          transition: 1.5s ;
+          left: 100%;
+          top: 10%;
+          z-index: 0;
+          -webkit-transform: translate(-100%, 10%);
+          -moz-transform: translate(-100%, 10%);
+          -ms-transform: translate(-100%, 10%);
+          -o-transform: translate(-100%, 10%);
+          transform: translate(-100%, 10%);
         }
         .slideItem-center{
           position: absolute;
           left: 50%;
           top: 10%;
-          z-index: 2;
+          z-index: 1;
           -webkit-transform: translate(-50%, 0);
           -moz-transform: translate(-50%, 0);
           -ms-transform: translate(-50%, 0);
@@ -399,13 +419,21 @@ body {
             width: 570px;
             height: 310px;
           }
+        }
+        .slideItem-left, .slideItem-center, .slideItem-right{
           -webkit-transition: 2s;
           -moz-transition: 2s ;
           -ms-transition: 2s ;
           -o-transition: 2s ;
           transition: 2s ;
+          img{
+            -webkit-transition: 2s;
+            -moz-transition: 2s ;
+            -ms-transition: 2s ;
+            -o-transition: 2s ;
+            transition: 2s ;
+          }
         }
-        
       }
       div.about-info {
         div.left-info, div.right-info {
