--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2730,7 +2730,6 @@ body {
     color: $text-menu-color;
     a {
       color: $text-menu-color;
-
     }
     div.ruler {
       background-image: url("../img/ruler-footer.png");
@@ -2759,6 +2758,11 @@ body {
               font-size: 20px;
               font-style: italic;
               font-weight: 800;
+              text-decoration: none;
+              &:hover{
+                text-decoration: none;
+                color: $primary-color-red;
+              }
             }
           }
         }
@@ -2774,6 +2778,11 @@ body {
             i {
               font-size: 11px;
             }
+            text-decoration: none;
+            &:hover{
+              text-decoration: none;
+              color: $primary-color-red;
+            }
           }
         }
         div.footer-right {
@@ -2783,6 +2792,13 @@ body {
           }
           div.blog-item {
             margin-bottom: 15px;
+            a{
+              text-decoration: none;
+              &:hover{
+                text-decoration: none;
+                color: $primary-color-red;
+              }
+            }
             img{
               border-radius: 5px;
               max-height: 70px;
